add edashboard 1 and 2

--- a/config.json
+++ b/config.json
@@ -10,6 +10,16 @@
         "online_class/flutter_book/elogin4",
         "online_class/flutter_book/elogin5",
         "online_class/flutter_book/esignup1",
-        "online_class/flutter_book/esignup2"
+        "online_class/flutter_book/esignup2",
+        "online_class/flutter_book/edashboard1",
+        "online_class/flutter_book/edashboard2",
+        "online_class/flutter_book/edashboard3",
+        "online_class/flutter_book/edashboard4",
+        "online_class/flutter_book/edashboard5",
+        "online_class/flutter_book/edashboard6", 
+        "online_class/flutter_book/edashboard7",
+        "online_class/flutter_book/edashboard8",
+        "online_class/flutter_book/edashboard9",
+        "online_class/flutter_book/edashboard10"
     ]
 }
