--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^2.0.5
   smooth_page_indicator: ^1.1.0
 
