--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,5 @@
         "editor.wordBasedSuggestions": false,
         "editor.defaultFormatter": "Dart-Code.dart-code"
     },
+    "java.configuration.updateBuildConfiguration": "interactive",
 }
