--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^2.0.5
+  google_maps_flutter: ^2.2.6
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
